--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -31,6 +31,7 @@
       </div>
       <div class="col-8">
         <input class="note-title" placeholder="Note Title" maxlength="28" type="text">
+        <!-- add id field here -->
         <textarea class="note-textarea" placeholder="Note Text"></textarea>
       </div>
     </div>
